@@ -1,3 +1,9 @@
+2006-10-10  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR C++/28450
+	* g++.dg/ext/vector4.C: New test.
+	* g++.dg/ext/complex1.C: New test.
+
 2006-10-09  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR c++/28349
